[gd_scene load_steps=76 format=2]

[ext_resource path="res://Kodlar/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Eklentiler/Player/Dead__006.png" type="Texture" id=2]
[ext_resource path="res://Eklentiler/Player/Slide__006.png" type="Texture" id=3]
[ext_resource path="res://Eklentiler/Player/Slide__001.png" type="Texture" id=4]
[ext_resource path="res://Eklentiler/Player/Dead__007.png" type="Texture" id=5]
[ext_resource path="res://Eklentiler/Player/Slide__003.png" type="Texture" id=6]
[ext_resource path="res://Eklentiler/Player/Dead__008.png" type="Texture" id=7]
[ext_resource path="res://Eklentiler/Player/Jump__009.png" type="Texture" id=8]
[ext_resource path="res://Eklentiler/Player/Climb_004.png" type="Texture" id=9]
[ext_resource path="res://Eklentiler/Player/Climb_001.png" type="Texture" id=10]
[ext_resource path="res://Eklentiler/Player/Run__007.png" type="Texture" id=11]
[ext_resource path="res://Eklentiler/Player/Jump__001.png" type="Texture" id=12]
[ext_resource path="res://Eklentiler/Player/Run__000.png" type="Texture" id=13]
[ext_resource path="res://Eklentiler/Player/Jump__005.png" type="Texture" id=14]
[ext_resource path="res://Eklentiler/Player/Jump__000.png" type="Texture" id=15]
[ext_resource path="res://Eklentiler/Player/Jump__002.png" type="Texture" id=16]
[ext_resource path="res://Eklentiler/Player/Jump__004.png" type="Texture" id=17]
[ext_resource path="res://Eklentiler/Player/Jump__003.png" type="Texture" id=18]
[ext_resource path="res://Eklentiler/Player/Jump__006.png" type="Texture" id=19]
[ext_resource path="res://Eklentiler/Player/Run__005.png" type="Texture" id=20]
[ext_resource path="res://Eklentiler/Player/Jump__008.png" type="Texture" id=21]
[ext_resource path="res://Eklentiler/Player/Jump__007.png" type="Texture" id=22]
[ext_resource path="res://Eklentiler/Player/Run__001.png" type="Texture" id=23]
[ext_resource path="res://Eklentiler/Player/Climb_002.png" type="Texture" id=24]
[ext_resource path="res://Eklentiler/Player/Climb_006.png" type="Texture" id=25]
[ext_resource path="res://Eklentiler/Player/Climb_009.png" type="Texture" id=26]
[ext_resource path="res://Eklentiler/Player/Dead__004.png" type="Texture" id=27]
[ext_resource path="res://Eklentiler/Player/Dead__003.png" type="Texture" id=28]
[ext_resource path="res://Eklentiler/Player/Climb_008.png" type="Texture" id=29]
[ext_resource path="res://Eklentiler/Player/Dead__005.png" type="Texture" id=30]
[ext_resource path="res://Eklentiler/Player/Climb_000.png" type="Texture" id=31]
[ext_resource path="res://Eklentiler/Player/Climb_005.png" type="Texture" id=32]
[ext_resource path="res://Eklentiler/Player/Climb_007.png" type="Texture" id=33]
[ext_resource path="res://Eklentiler/Player/Dead__002.png" type="Texture" id=34]
[ext_resource path="res://Eklentiler/Player/Climb_003.png" type="Texture" id=35]
[ext_resource path="res://Eklentiler/Player/Dead__000.png" type="Texture" id=36]
[ext_resource path="res://Eklentiler/Player/Dead__001.png" type="Texture" id=37]
[ext_resource path="res://Eklentiler/Player/Dead__009.png" type="Texture" id=38]
[ext_resource path="res://Eklentiler/Player/Idle__001.png" type="Texture" id=39]
[ext_resource path="res://Eklentiler/Player/Idle__006.png" type="Texture" id=40]
[ext_resource path="res://Eklentiler/Player/Idle__008.png" type="Texture" id=41]
[ext_resource path="res://Eklentiler/Player/Idle__002.png" type="Texture" id=42]
[ext_resource path="res://Eklentiler/Player/Idle__009.png" type="Texture" id=43]
[ext_resource path="res://Eklentiler/Player/Idle__004.png" type="Texture" id=44]
[ext_resource path="res://Eklentiler/Player/Run__002.png" type="Texture" id=45]
[ext_resource path="res://Eklentiler/Player/Run__006.png" type="Texture" id=46]
[ext_resource path="res://Eklentiler/Player/Idle__005.png" type="Texture" id=47]
[ext_resource path="res://Eklentiler/Player/Run__008.png" type="Texture" id=48]
[ext_resource path="res://Eklentiler/Player/Idle__000.png" type="Texture" id=49]
[ext_resource path="res://Eklentiler/Player/Run__003.png" type="Texture" id=50]
[ext_resource path="res://Eklentiler/Player/Idle__003.png" type="Texture" id=51]
[ext_resource path="res://Eklentiler/Player/Idle__007.png" type="Texture" id=52]
[ext_resource path="res://Eklentiler/Player/Run__004.png" type="Texture" id=53]
[ext_resource path="res://Eklentiler/Player/Run__009.png" type="Texture" id=54]
[ext_resource path="res://Eklentiler/Player/Slide__000.png" type="Texture" id=55]
[ext_resource path="res://Eklentiler/Player/Slide__005.png" type="Texture" id=56]
[ext_resource path="res://Eklentiler/Player/Slide__007.png" type="Texture" id=57]
[ext_resource path="res://Eklentiler/Player/Slide__004.png" type="Texture" id=58]
[ext_resource path="res://Eklentiler/Player/Slide__002.png" type="Texture" id=59]
[ext_resource path="res://Eklentiler/Player/Slide__008.png" type="Texture" id=60]
[ext_resource path="res://Eklentiler/Player/Slide__009.png" type="Texture" id=61]
[ext_resource path="res://Sahneler/HUD_Enemy.tscn" type="PackedScene" id=62]
[ext_resource path="res://Eklentiler/Player/Attack__006.png" type="Texture" id=63]
[ext_resource path="res://Eklentiler/Player/Attack__002.png" type="Texture" id=64]
[ext_resource path="res://Eklentiler/Player/Attack__003.png" type="Texture" id=65]
[ext_resource path="res://Eklentiler/Player/Attack__004.png" type="Texture" id=66]
[ext_resource path="res://Eklentiler/Player/Attack__007.png" type="Texture" id=67]
[ext_resource path="res://Eklentiler/Player/Attack__009.png" type="Texture" id=68]
[ext_resource path="res://Eklentiler/Player/Attack__008.png" type="Texture" id=69]
[ext_resource path="res://Eklentiler/Player/Attack__005.png" type="Texture" id=70]
[ext_resource path="res://Eklentiler/Player/Attack__001.png" type="Texture" id=71]
[ext_resource path="res://Eklentiler/Player/Attack__000.png" type="Texture" id=72]

[sub_resource type="CapsuleShape2D" id=1]
radius = 100.0
height = 200.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 49 ), ExtResource( 39 ), ExtResource( 42 ), ExtResource( 51 ), ExtResource( 44 ), ExtResource( 47 ), ExtResource( 40 ), ExtResource( 52 ), ExtResource( 41 ), ExtResource( 43 ) ],
"loop": true,
"name": "Idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 23 ), ExtResource( 45 ), ExtResource( 50 ), ExtResource( 53 ), ExtResource( 20 ), ExtResource( 46 ), ExtResource( 11 ), ExtResource( 48 ), ExtResource( 54 ) ],
"loop": true,
"name": "Run",
"speed": 20.0
}, {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "real_dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ), ExtResource( 4 ), ExtResource( 59 ), ExtResource( 6 ), ExtResource( 58 ), ExtResource( 56 ), ExtResource( 3 ), ExtResource( 57 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "Slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 8 ) ],
"loop": true,
"name": "Jump",
"speed": 25.0
}, {
"frames": [ ExtResource( 72 ), ExtResource( 71 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 70 ), ExtResource( 63 ), ExtResource( 67 ), ExtResource( 69 ), ExtResource( 68 ) ],
"loop": true,
"name": "knife_attack",
"speed": 20.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 34 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 38 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 10 ), ExtResource( 24 ), ExtResource( 35 ), ExtResource( 9 ), ExtResource( 32 ), ExtResource( 25 ), ExtResource( 33 ), ExtResource( 29 ), ExtResource( 26 ) ],
"loop": true,
"name": "Climb",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 281.529, 219.534 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 128
collision_mask = 1539
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.862745, 0.352941, 0.384314, 1 )
frames = SubResource( 2 )
animation = "Idle"

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="HUD_Enemy" parent="." instance=ExtResource( 62 )]

[node name="Attack_To_Player_Area" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_To_Player_Area"]
position = Vector2( 3.56361, 0 )
shape = SubResource( 3 )

[node name="attack_timer" type="Timer" parent="."]
one_shot = true

[node name="Muzzle" type="Position2D" parent="."]

[node name="kunai_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Attack_To_Player_Area" to="." method="_on_Attack_To_Player_Area_body_entered"]
[connection signal="body_exited" from="Attack_To_Player_Area" to="." method="_on_Attack_To_Player_Area_body_exited"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="kunai_timer" to="." method="_on_kunai_timer_timeout"]
